# IQAC-DMS

./: .env  .gitignore  1_🏠_Homapage.py  app.py  file.py  main.py  pyproject.toml  requirements.txt  setup.py
Class_Files/: make_databse.py
app/core/: config.py  database.py
app/utils/: exception.py  logger.py
pages/: 2_🧑‍🔬_Research_Projects.py  3_🤝_Consultancy_projects.py  4_🧠_PhD_scholars.py
test_folder/: creat_table.py  neo_data.ipynb  read_databse.py  show_data_.py
utility/: CROUD.py  Insear_data.py  insert_data.py  read_database.py
